added logout and creating new user

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -16,6 +16,9 @@
             <input type="password" id="password" name="password" required>
             <button type="submit">Login</button>
         </form>
+        <form action="createUser.html" method="get">
+            <button type="submit">Create User</button>
+        </form>
     </div>
 </body>
 </html>
